# topola

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  flake.nix  index.html
.githooks/: pre-commit
.woodpecker/: build.yml  build_cli.yaml  build_egui.yaml  build_sdl2.yaml  build_wasm.yaml  lint.yaml  pre-commit.yaml  test.yaml
assets/: sw.js
examples/: specctra.rs
locales/de/: main.ftl
locales/en-US/: main.ftl
locales/nl/: main.ftl
locales/pl/: main.ftl
locales/tr/: main.ftl
locales/zh_Hans/: main.ftl
locales/zh_Hant/: main.ftl
macro/dsn_derive/: Cargo.toml
macro/dsn_derive/src/: lib.rs  write.rs
macro/specctra_derive/src/: read.rs
macros/specctra_derive/: Cargo.toml
macros/specctra_derive/src/: lib.rs  read.rs  write.rs
src/: astar.rs  band.rs  bow.rs  connectivity.rs  draw.rs  geometry.rs  graph.rs  guide.rs  layout.rs  lib.rs  loose.rs  main.rs  math.rs  mesh.rs  primitive.rs  route.rs  router.rs  rules.rs  segbend.rs  shape.rs  step.rs  stepper.rs  stretch.rs  tracer.rs  traverser.rs  triangulation.rs  weight.rs  wraparoundable.rs
src/app/sdl2_demo/: app.rs
src/autorouter/: autoroute.rs  autorouter.rs  board.rs  command.rs  compare.rs  compare_detours.rs  execute.rs  execution.rs  history.rs  invoker.rs  measure_length.rs  mod.rs  overlay.rs  place_via.rs  pointroute.rs  ratsnest.rs  remove_bands.rs  selection.rs
src/board/: board.rs  connectivity.rs  mesadata.rs  mod.rs
src/drawing/: band.rs  bend.rs  cane.rs  collect.rs  dot.rs  drawing.rs  gear.rs  graph.rs  grouping.rs  groups.rs  guide.rs  head.rs  loose.rs  mod.rs  primitive.rs  rules.rs  seg.rs  segbend.rs  wraparoundable.rs  zone.rs
src/dsn/: common.rs  de.rs  design.rs  groups.rs  mesadata.rs  mod.rs  read.rs  rules.rs  structure.rs  structure2.rs  write.rs
src/geometry/: bend.rs  compound.rs  dot.rs  geometry.rs  grouping.rs  mod.rs  poly.rs  polygon.rs  primitive.rs  seg.rs  shape.rs  with_rtree.rs
src/interactor/: activity.rs  interaction.rs  interactor.rs  mod.rs
src/layout/: band.rs  bend.rs  collect.rs  connectivity.rs  dot.rs  geometry.rs  graph.rs  guide.rs  layout.rs  loose.rs  mod.rs  poly.rs  primitive.rs  rules.rs  seg.rs  segbend.rs  via.rs  zone.rs
src/layout/geometry/: geometry.rs  mod.rs  shape.rs  with_rtree.rs
src/overlay/: mod.rs  overlay.rs  ratsnest.rs
src/router/: astar.rs  draw.rs  mesh.rs  mod.rs  navcord.rs  navcorder.rs  navmesh.rs  route.rs  router.rs  trace.rs  tracer.rs  triangulation.rs
src/specctra/: common.rs  design.rs  mesadata.rs  mod.rs  read.rs  structure.rs  write.rs
tests/: 0603_breakout.rs  four_3rd_order_smd_lc_filters.rs  multilayer.rs  single_layer.rs  single_layer_tht_diode_bridge_rectifier.rs
tests/common/: mod.rs
tests/data/: test.dsn  test.kicad_pcb  test.kicad_pro
tests/data/0603_breakout/: 0603_breakout.dsn  0603_breakout.kicad_pcb  0603_breakout.kicad_prl  0603_breakout.kicad_sch  autoroute_all.cmd
tests/data/de9_tht_female_tht_female/: de9_tht_female_tht_female.dsn  de9_tht_female_tht_female.kicad_pcb  de9_tht_female_tht_female.kicad_prl  de9_tht_female_tht_female.kicad_pro  de9_tht_female_tht_female.kicad_sch
tests/data/de9_tht_female_to_tht_female/: de9_tht_female_to_tht_female.kicad_pcb  de9_tht_female_to_tht_female.kicad_prl  de9_tht_female_to_tht_female.kicad_pro
tests/data/four_3rd_order_smd_lc_filters/: autoroute_signals.cmd  four_3rd_order_smd_lc_filters.kicad_pcb  four_3rd_order_smd_lc_filters.kicad_prl
tests/data/prerouted_lm317_breakout/: prerouted_lm317_breakout.dsn  prerouted_lm317_breakout.kicad_pcb  prerouted_lm317_breakout.kicad_prl  prerouted_lm317_breakout.kicad_pro  prerouted_lm317_breakout.kicad_sch  unrouted_lm317_breakout.dsn
tests/data/single_layer_tht_diode_bridge_rectifier/: autoroute_all.cmd  single_layer_tht_diode_bridge_rectifier.dsn  single_layer_tht_diode_bridge_rectifier.kicad_pcb  single_layer_tht_diode_bridge_rectifier.kicad_prl  single_layer_tht_diode_bridge_rectifier.kicad_pro  single_layer_tht_diode_bridge_rectifier.kicad_sch
tests/data/test/: fp-info-cache  test.kicad_pcb  test.kicad_prl
tests/multilayer/prerouted_lm317_breakout/: fp-info-cache  unrouted_lm317_breakout.ses
tests/multilayer/signal_integrity_test/: signal_integrity_test.kicad_prl  signal_integrity_test.kicad_pro  signal_integrity_test.ses
tests/single_layer/0603_breakout/: 0603_breakout.ses  autoroute_all.cmd
tests/single_layer/3pin_xlr_tht_female_to_tht_female/: 3pin_xlr_tht_female_to_tht_female.dsn  3pin_xlr_tht_female_to_tht_female.kicad_pcb  3pin_xlr_tht_female_to_tht_female.kicad_sch  3pin_xlr_tht_female_to_tht_female.ses
tests/single_layer/4x_3rd_order_smd_lc_filters/: 4x_3rd_order_smd_lc_filters.dsn  4x_3rd_order_smd_lc_filters.kicad_pcb  4x_3rd_order_smd_lc_filters.kicad_prl  4x_3rd_order_smd_lc_filters.kicad_pro  autoroute_signals.cmd  four_3rd_order_smd_lc_filters.kicad_sch
tests/single_layer/de9_tht_female_to_tht_female/: de9_tht_female_to_tht_female.kicad_sch
tests/single_layer/four_3rd_order_smd_lc_filters/: four_3rd_order_smd_lc_filters.dsn  four_3rd_order_smd_lc_filters.kicad_pro  four_3rd_order_smd_lc_filters.kicad_sch  four_3rd_order_smd_lc_filters.ses  fp-info-cache
tests/single_layer/test/: test.dsn
tests/single_layer/tht_3pin_xlr_to_tht_3pin_xlr/: 3pin_xlr_tht_female_to_tht_female.kicad_prl  3pin_xlr_tht_female_to_tht_female.kicad_pro  3pin_xlr_tht_female_to_tht_female.kicad_sch  autoroute_all.cmd  tht_3pin_xlr_to_tht_3pin_xlr.dsn  tht_3pin_xlr_to_tht_3pin_xlr.kicad_pcb
tests/single_layer/tht_de9_to_tht_de9/: de9_tht_female_to_tht_female.kicad_pcb  de9_tht_female_to_tht_female.kicad_prl  de9_tht_female_to_tht_female.kicad_sch  tht_de9_to_tht_de9.dsn  tht_de9_to_tht_de9.kicad_pro
tests/single_layer/tht_diode_bridge_rectifier/: autoroute_all.cmd  tht_diode_bridge_rectifier.dsn  tht_diode_bridge_rectifier.kicad_pcb  tht_diode_bridge_rectifier.kicad_prl  tht_diode_bridge_rectifier.kicad_pro  tht_diode_bridge_rectifier.kicad_sch  tht_diode_bridge_rectifier.ses
(+10 files in other folders)
